- [Feature] CloudBerry Explorer for Amazon S3 Bookmarks Importer (Windows)
- [Feature] CloudBerry Explorer for Google Storage Bookmarks Importer (Windows)
- [Feature] CloudBerry Explorer for Azure Blob Storage Bookmarks Importer (Windows)
- [Feature] Perform MD5 hash calculation during upload (#5186) (S3, Cloudfiles)
- [Feature] Rename existing files on upload or download (#5117)
- [Bugfix] Slow SFTP transfers (#185)
- [Bugfix] Support for S3Fox directory placeholders (S3)
- [Bugfix] Support for Google Storage Console directory placeholders (S3)
- [Bugfix] Support for s3sync.rb directory placeholders (#5374) (S3)
- [Bugfix] Connect through HTTP/HTTPS proxy (#5379) (Google Docs)
- [Bugfix] Changing storage class fails (S3)
- [Bugfix] Apply ACLs recursively (S3)
- [Bugfix] Apply custom HTTP headers recursively (S3)
- [Bugfix] Show last access timestamp in history (#3805)
- [Bugfix] Interoperability (#2609, #4231, #2915) (WebDAV)
- [Bugfix] SSL version number incompatibility (#5061)
- [Bugfix] Display decimal file size (10.6) #3771)
- [Bugfix] Preserve upload modification date does not work for folders (#3017)

3.7 (Oct-21-2010) [http://trac.cyberduck.ch/milestone/3.7]
- [Feature] Option to upload with temporary name and rename file after transfer is complete (#4165)
- [Feature] Copy files between browser windows with different sessions (#21)
- [Feature] Option to display hidden files in upload prompt (#1243)
- [Feature] Import Transmit favorites (#3073)
- [Feature] Copy and open multiple URLs (#5135)
- [Feature] Support for PuTTY private key format (SFTP) (#5322)
- [Feature] Duplicate Bookmarks using drag and drop with option key
- [Feature] Display only affected files in synchronization preview (#5226)
- [Feature] Change update source to snapshot builds in Preferences
- [Bugfix] Files pasted upload to parent directory (#5155)
- [Bugfix] Uploading .xlsx or .docx documents fails with permission error (#5169) (Google Docs)