@@ -64,6 +64,9 @@
     <li>[Feature] Rename existing files on upload or download (<a
             href="http://trac.cyberduck.ch/ticket/5117">#5117</a>)
     </li>
+    <li>[Feature] Show last access timestamp in history (<a
+            href="http://trac.cyberduck.ch/ticket/3805">#3805</a>)
+    </li>
     <li>[Bugfix] Slow SFTP transfers (<a
             href="http://trac.cyberduck.ch/ticket/185">#185</a>)
     </li>
@@ -81,9 +84,6 @@
     <li>[Bugfix] Changing storage class fails (S3)</li>
     <li>[Bugfix] Apply ACLs recursively (S3)</li>
     <li>[Bugfix] Apply custom HTTP headers recursively (S3)</li>
-    <li>[Bugfix] Show last access timestamp in history (<a
-            href="http://trac.cyberduck.ch/ticket/3805">#3805</a>)
-    </li>
     <li>[Bugfix] Interoperability (<a
             href="http://trac.cyberduck.ch/ticket/2609">#2609</a>, <a
             href="http://trac.cyberduck.ch/ticket/4231">#4231</a>, <a
@@ -142,6 +142,15 @@
     <li>[Bugfix] Proxy connection failure (#5239) (S3)</li>
     <li>[Bugfix] Crash importing Transmit bookmarks for some users (<a
             href="http://trac.cyberduck.ch/ticket/5351">#5351</a>)
+    </li>
+    <li>[Bugfix] Uploading large documents might fail (<a
+            href="http://trac.cyberduck.ch/ticket/5351">#5411</a>) (Google Docs)
+    </li>
+    <li>[Bugfix] Web URL configuration fails for relative default path (<a
+            href="http://trac.cyberduck.ch/ticket/5351">#4012</a>)
+    </li>
+    <li>[Bugfix] Support CIDR styled patterns for hosts excluded from proxy settings (<a
+            href="http://trac.cyberduck.ch/ticket/5351">#5142</a>)
     </li>
 </ul>
 
