@@ -7,9 +7,9 @@
 - [Feature] CloudFront CDN configuration with custom origin server (Amazon CloudFront & FTP, SFTP, WebDAV)
 - [Feature] CloudFront CDN invalidation requests (S3) (#5197)
 - [Feature] Perform MD5 hash calculation during upload (#5186) (S3, Cloudfiles)
+- [Feature] Show last access timestamp in history (#3805)
 - [Bugfix] Apply ACLs recursively (S3)
 - [Bugfix] Apply custom HTTP headers recursively (S3)
-- [Bugfix] Show last access timestamp in history (#3805)
 - [Bugfix] Interoperability (#2609, #4231, #2915) (WebDAV)
 - [Bugfix] SSL version number incompatibility (#5061)
 - [Bugfix] Display decimal file size (10.6) #3771)
